<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Alexandria</string>

    <!-- Activities -->
    <string name="title_activity_add_book">Add Book</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Menu Items -->
    <string name="books">List of Books</string>
    <string name="scan">Scan/Add a Book</string>
    <string name="about">About this App</string>

    <!-- Actions -->
    <string name="action_scan_book">Scan Book</string>
    <string name="action_enter_isbn">Enter ISBN</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_delete">Delete Book</string>
    <string name="action_about_app">About App</string>

    <!-- Hints -->
    <string name="hint_isbn">10/13 digit ISBN</string>
    <string name="hint_book_cover">Book cover</string>

    <!-- Instructions -->
    <string name="instructions_enter_isbn">
        Enter book\'s ISBN number. You can find this number on the book cover or online. It is usually 10 or 13 digits long.
    </string>
    <string name="instructions_scan_book">
        You can also scan a book\'s barcode which includes it\'s ISBN number to automatically search the it\'s information.
    </string>
    <string name="info_no_books_in_app">
        We found no books registered. Try adding your favorite or collection of books
        by scanning or entering their ISBN number. Give it a try!
    </string>

    <!-- Info -->
    <string name="info_no_book_cover">No cover found</string>
    <string name="info_book_already_registered">Book already registered.</string>
    <string name="info_book_not_found">Book not found. Is this book brand new?</string>

    <!-- Errors -->
    <string name="error_invalid_isbn_number">Invalid ISBN number. Must be 10 or 13 characters long.</string>
    <string name="error_searching_book_info">Error finding book info. Please try again :(</string>

    <!-- Sharing -->
    <string name="share_text">A must read book: </string>

    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="scan_button">Scan</string>
    <string name="input_hint">Insert ISBN-13. Digits only.</string>

    <string name="ok_button">Next</string>
    <string name="cancel_button">Cancel</string>
    <string name="not_found">No Book found</string>
    <string name="search">Search</string>
    <string name="delete">Delete Book</string>
    <string name="pref_startScreen">Select Startscreen</string>
    <string name="action_share">Share</string>
    <string name="back_button">go back</string>

    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
    The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>

</resources>
