<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <include
        android:id="@+id/toolbar"
        layout="@layout/include_toolbar" />

    <GridView
        android:id="@+id/books_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:layout_below="@id/toolbar"
        android:numColumns="2"
        android:verticalSpacing="8dp"
        android:horizontalSpacing="8dp"
        android:clipToPadding="false"
        tools:visibility="gone"/>

    <TextView
        android:id="@+id/no_books_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:text="@string/info_no_books_in_app"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_centerInParent="true"/>


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:menu_icon="@drawable/ic_add">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_scan_barcode"
            app:fab_colorNormal="@color/white"
            app:fab_colorPressed="@color/white"
            app:fab_colorRipple="#99FFFFFF"
            app:fab_label="@string/action_scan_book"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_text"
            app:fab_colorNormal="@color/white"
            app:fab_colorPressed="@color/white"
            app:fab_colorRipple="#99FFFFFF"
            app:fab_label="@string/action_enter_isbn"/>

    </com.github.clans.fab.FloatingActionMenu>

    <!--
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@android:drawable/ic_input_add"
        android:tint="@color/white"
        app:fabSize="normal" />
    -->

    <!--
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal|top">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchButton"
            android:src="@drawable/ic_action_search"
            android:contentDescription="@string/search"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginTop="5dp"
            android:layout_alignParentEnd="true"/>

        <EditText
            android:layout_width = "fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchText"
            android:inputType="text"
            android:saveEnabled="true"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_toLeftOf="@+id/searchButton"
            android:layout_toStartOf="@+id/searchButton"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"/>


        <ListView android:id="@+id/books_list"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_alignParentLeft="true"
                  android:layout_marginLeft="0dp"
                  android:layout_below="@+id/searchText"
                  android:layout_alignRight="@id/searchButton"
                  android:layout_alignParentRight="true"
                  android:layout_alignParentStart="true"
                  android:layout_toRightOf="@id/searchButton"/>



    </RelativeLayout>
    -->
</RelativeLayout>
